@@ -2,13 +2,13 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Network Maps Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.networkmaps;singleton:=true
-Bundle-Version: 2.0.2
+Bundle-Version: 2.0.3
 Bundle-Activator: org.netxms.ui.eclipse.networkmaps.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.0",
- org.netxms.ui.eclipse.console;bundle-version="2.0.0",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.3",
+ org.netxms.ui.eclipse.console;bundle-version="2.0.1",
  org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.0",
  org.netxms.ui.eclipse.imagelibrary;bundle-version="2.0.0",
  org.netxms.ui.eclipse.osm;bundle-version="2.0.0",
